# Enigma-Breaker

./: Cargo.toml  README.md  Report.md
.github/workflows/: rust.yml
benches/: benchmark.rs  encipher.rs  encode.rs  encoder.rs  main.rs
lib_enigma/: Cargo.toml
lib_enigma/benches/: brute_force.rs  encipher.rs  main.rs
lib_enigma/src/: letter.rs  lib.rs  message.rs
lib_enigma/src/brute_force/: combinations.rs  force.rs  mod.rs  plug_options.rs  unknown.rs
lib_enigma/src/machine/: char_mapping.rs  data.rs  enigma_machine.rs  machine_state.rs  plug_board.rs
lib_enigma/tests/: richard.json  turnover.json
src/: char_mapping.rs  consts.rs  data.rs  encipher.rs  force.rs  letter.rs  lib.rs  machine.rs  main.rs  message.rs  plug_board.rs  reflector.rs  rotor.rs  util.rs
src/brute_force/: combinations.rs  mod.rs  plug_options.rs
src/cli/: encipher.rs  encode.rs  force.rs  mod.rs
src/force/: combinations.rs  mod.rs  unknown.rs
src/machine/: char_mapping.rs  data.rs  enigma_machine.rs  machine_state.rs  mod.rs  plug_board.rs  reflector.rs  rotor.rs
tests/: 1.in  double_step.json  simple.json
