# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enigma"
path = "src/main.rs"

[dependencies]
itertools = "0.11.0"
clap = { version = "4.4.6", features = ["derive"] }
lib_enigma = { path = "lib_enigma" }
